fix: btns alignment and size

--- a/src/application.scss
+++ b/src/application.scss
@@ -115,9 +115,7 @@ p {
     padding: 1em;
     gap: 1em;
     margin-top: 25%;
-    p {
-      text-shadow: $dark;
-    }
+    text-shadow: 0px 0px 8px rgba($dark, 0.75);
     .btns {
       display: flex;
       flex-direction: column;
@@ -136,13 +134,14 @@ p {
 .btn {
   display: flex;
   flex: 1;
+  align-items: center;
   justify-content: center;
   min-width: 125px;
   min-height: 65px;
   border-radius: 4px;
   background-color: $white;
   color: #000;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 1rem;
   border: none;
   cursor: pointer;
   font-size: 1.2em;
@@ -180,6 +179,8 @@ p {
     .hero__content {
       .btns {
         flex-direction: row;
+        justify-content: start;
+        gap: 1em;
       }
     }
   }
@@ -211,6 +212,9 @@ p {
       max-width: 50%;
       margin-bottom: 25%;
     }
+  }
+  .btn {
+    font-size: 1.5em;
   }
 }
 
